tests/v0_8/invalid/fleet_no_match.devops
version = "v0.8"

target "web1" {
    address = "1.1.1.1:7700"
    labels = { role = "web" }
}

fleet "empty_fleet" {
    match = { role = "db" } // Matches nothing
}

node "fail_node" {
    type = process.exec
    targets = [empty_fleet]
    cmd = ["ls"]
}
